# knowledge-commons-works

./: .buildinfo  .buildinfo.bak  .dockerignore  .env.local  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .invenio  .invenio.private.bak  .npmrc  AGENTS.md  CHANGES.html  CHANGES.md  Dockerfile  Dockerfile.bak2  LICENSE.txt  Pipfile  README.html  README.md  api.html  architecture.html  babel.config.js  changelog.html  cli_commands.html  configuration.html  customizations.html  developing.html  docker-compose.dev-local.yml  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  docker-compose.yml.bak  docker-services.yml  docker-services.yml.bak  dockerfile_helper.py  feature_highlights.html  (+29 more)
scripts/core-migrate/: README.md  pyproject.toml
scripts/core-migrate/core_migrate/: config.py  core_crawler.py  core_migrate_users.py  fedora_fetcher.py  main.py  record_loader.py  serializer.py  utils.py
scripts/core-migrate/tests/: conftest.py  core_crawler_test.py  core_migrate_test.py
site/: .gitkeep  CHANGES.md  pyproject.toml  pyproject.toml.bak  run_tests.sh  setup.cfg
site/coretest/: views.py  webpack.py
site/kcworks/: __init__.py  api_helpers.py  cli.py  ext.py  invenio_config.py  proxies.py  utils.py  webpack.py
site/kcworks/assets/: project_assets_overlay.py  webpack_storage.py
site/kcworks/blueprints/: menu_customization.py
site/kcworks/config/: __init__.py  custom_fields.py  deposit_form_layout.py  mail.py  notifications.py  pids.py  site_urls.py  vocabularies.py
site/kcworks/invenio_remote_api_provisioner/: __init__.py  config.py  queues.py  tasks.py
site/kcworks/invenio_remote_api_provisioner/tests/: __init__.py  conftest.py
site/kcworks/metadata_fields/: codemeta_fields.py  hclegacy_groups_for_deposit.py  hclegacy_metadata_fields.py  imprint_fields.py  journal_fields.py  kcr_ai_field.py  kcr_media_field.py  kcr_metadata_fields.py  kcr_notes_fields.py  kcr_series_field.py  kcr_user_tags_fields.py  kcr_volumes_fields.py  meeting_fields.py
site/kcworks/services/: __init__.py
site/kcworks/services/accounts/: api.py  idms.py  saml.py
site/kcworks/services/cilogon/: api.py  cilogon_service.py  groups.py  idms_api.py  utils.py  views.py
site/kcworks/services/communities/: __init__.py  cli.py  community_parent.py  default_branding.py  group_collections.py  index_mapping.py  org_member_records.py  permissions.py  tasks.py
site/kcworks/services/geopattern/: __init__.py  color.py  pattern.py  raster.py  svg.py
site/kcworks/services/notifications/: backends.py  builders.py  generators.py  internal_notification_backend.py  permissions.py  service.py
site/kcworks/services/records/: bulk_operations.py  cli.py  export.py  permissions.py  service.py  test_data.py  validators.py
site/kcworks/services/remote_data_collections/: auth_helpers.py  globus_api.py
site/kcworks/services/search/: __init__.py  indexes.py  indices.py  mappings_utilities.py
site/kcworks/services/users/: cli.py  service.py
site/kcworks/stats/: aggregations.py
site/kcworks/stats_dashboard/: APIclient.py  views.py
site/kcworks/stats_dashboard/legacy/: stats_CLI.py
site/kcworks/templates/: template_filters.py
site/kcworks/utils/: community_utils.py  deposit_extras.py  menu_utils.py  names.py  utils.py
site/kcworks/views/: communities_settings_ui.py  communities_theme_settings.py  dev_ui_gallery.py  error_handlers.py  views.py
site/kcworks/views/admin_login/: admin_login.py
site/kcworks/views/api/: notifications.py
site/kcworks/views/custom_deposit/: custom_deposit.py
site/kcworks/views/globus/: globus_callback.py  globus_login.py
site/kcworks/views/remote_data_collections/: globus_callback.py  globus_endpoints.py  globus_login.py
site/kcworks/views/task_results/: __init__.py  task_results.py
site/kcworks/vocabularies/ofr/: ofr.py
site/knowledge_commons_repository/: views.py  webpack.py
site/knowledge_commons_repository/custom_deposit/: custom_deposit.py  field_config.yaml
site/knowledge_commons_repository/custom_deposits/: custom_deposits.py  field_config.yaml
site/knowledge_commons_repository/guides/: guides.py
site/knowledge_commons_repository/invenio_remote_api_provisioner/: README.md  __init__.py  components.py  config.py  ext.py  service.py  tasks.py  utils.py
site/knowledge_commons_repository/invenio_remote_api_provisioner/tests/: conftest.py  test_remote_api_provisioner.py
site/knowledge_commons_repository/invenio_remote_search_provisioner/: __init__.py  components.py  ext.py  service.py  utils.py  views.py
site/knowledge_commons_repository/invenio_remote_search_provisioner/tests/: conftest.py  fake_datacite_client.py  test_remote_search_provisioner.py
site/knowledge_commons_repository/invenio_remote_user_data/: __init__.py  config.py  ext.py  proxies.py  queues.py  service.py  signals.py  tasks.py  utils.py  views.py
site/knowledge_commons_repository/metadata_fields/: codemeta_fields.py  hclegacy_groups_for_deposit.py  hclegacy_metadata_fields.py  imprint_fields.py  journal_fields.py  kcr_ai_field.py  kcr_media_field.py  kcr_metadata_fields.py  kcr_notes_fields.py  kcr_series_field.py  kcr_user_tags_fields.py  kcr_volumes_fields.py  meeting_fields.py
site/knowledge_commons_repository/task_results/: task_results.py
site/knowledge_commons_repository/views/: views.py
site/tests/: conftest.py
site/tests/api/: conftest.py  test_accounts.py  test_api_factory.py  test_api_import.py  test_api_notifications.py  test_api_record_ops.py  test_collections.py  test_per_field_edit_permissions.py  test_search_provisioning.py  test_stats.py  test_user_data_sync.py  test_utils.py
site/tests/e2e/: conftest.py  e2e_test_factory.py
site/tests/fixtures/: communities.py  custom_fields.py  files.py  identifiers.py  records.py  roles.py  saml.py  search_provisioning.py  stats.py  users.py
site/tests/fixtures/vocabularies/: date_types.py  (+5 more)
site/tests/helpers/: fake_datacite_client.py
site/tests/ui/: conftest.py  test_factory  test_factory.py  test_guides.py
(+1411 files in other folders)
