[build-system]
requires = ["setuptools>=61.0", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[project]
name = "kcworks"
version = "0.3.8-beta11"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.15",
    "async-timeout>=4.0.3",
    "flask-admin==1.6.1",
    "flask-babelex",
    "flask-breadcrumbs",
    "flask-principal",
    "halo",
    "invenio-app-rdm>=12.0.0,<13.0.0",
    "invenio-communities==13.0.3",
    "invenio-group-collections-kcworks",
    "invenio-modular-deposit-form",
    "invenio-modular-detail-page",
    "invenio-rdm-records==10.9.1",
    "invenio-record-importer-kcworks",
    "invenio-records-resources==5.10.0",
    "invenio-remote-api-provisioner",
    "invenio-logging[sentry-sdk]<2.1.2",
    "invenio-s3",
    "invenio-saml",
    "invenio-subjects-fast",
    "invenio-utilities-tuw",
    "isbnlib",
    "langdetect",
    "lxml==5.2.1",
    "numpy",
    "pip",
    "pluggy<1.0,>=0.10.0",
    "pytest-invenio<3.0.0",
    "python-dotenv",
    "python-iso639",
    "python-stdnum",
    "selenium",
    "sqlalchemy[asyncio]",
    "timefhuman",
    "titlecase",
    "tqdm",
    "unidecode",
    "flask-iiif",
    "sentry-sdk[flask]",
    "pydantic",
    "xmlsec==1.3.14",
    "invenio-remote-user-data-kcworks",
    "uwsgi>=2.0.23",
]

[project.optional-dependencies]
tests = [
    "pytest-invenio>=2.1.0,<3.0.0",
    "pytest-ruff>=0.1.0",
    "pytest-mypy>=0.10.0",
]
dev = [
    "halo",
    "jsonlines",
    "sphinx",
    "myst-parser",
    "furo",
    "black>=25.1.0",
    "djlint>=1.36.4",
    "psycopg2-binary>=2.9.10",
    "pytest-black>=0.6.0",
    "pytest-isort>=4.0.0",
    "requests-mock",
    "check-manifest>=0.25",
    "selenium",
    "docker-services-cli",
    "pytest-mock",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.uv.sources]
invenio-communities = {path = "./site/kcworks/dependencies/invenio-communities"}
invenio-group-collections-kcworks = {path = "./site/kcworks/dependencies/invenio-group-collections-kcworks"}
invenio-modular-deposit-form = {path = "./site/kcworks/dependencies/invenio-modular-deposit-form"}
invenio-modular-detail-page = {path = "./site/kcworks/dependencies/invenio-modular-detail-page"}
invenio-rdm-records = {path = "./site/kcworks/dependencies/invenio-rdm-records"}
invenio-records-resources = {path = "./site/kcworks/dependencies/invenio-records-resources"}
invenio-remote-api-provisioner = {path = "./site/kcworks/dependencies/invenio-remote-api-provisioner"}
invenio-record-importer-kcworks = {path = "./site/kcworks/dependencies/invenio-record-importer-kcworks"}
invenio-remote-user-data-kcworks = { path = "site/kcworks/dependencies/invenio-remote-user-data-kcworks" }

[tool.setuptools]
package-dir = {"" = "site"}

[tool.setuptools.package-data]
"*" = ["*.po", "*.pot", "*.mo"]

[tool.hatch.build.targets.wheel]
packages = ["site"]

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points."invenio_base.apps"]
kcworks = "kcworks.ext:KCWorks"

[project.entry-points."invenio_base.api_apps"]
kcworks = "kcworks.ext:KCWorks"

[project.entry-points."invenio_base.api_blueprints"]
kcworks_api = "kcworks.views.views:create_api_blueprint"

[project.entry-points."invenio_base.blueprints"]
kcworks_views = "kcworks.views.views:create_blueprint"
knowledge_commons_works_menu = "kcworks.blueprints.menu_customization:create_blueprint"
kcworks_stats_dashboard_view = "kcworks.stats_dashboard.views:create_blueprint"

[project.entry-points."invenio_assets.webpack"]
kcworks_theme = "kcworks.webpack:theme"

[project.entry-points."invenio_previewer.previewers"]
custom_pdf_viewer = "kcworks.views.previewers.invenio_custom_pdf_viewer.custom_pdf_viewer"
custom_default_viewer = "kcworks.views.previewers.invenio_custom_default_viewer.custom_default_viewer"
custom_docx_viewer = "kcworks.views.previewers.invenio_custom_docx_viewer.custom_docx_viewer"
custom_pptx_viewer = "kcworks.views.previewers.invenio_custom_pptx_viewer.custom_pptx_viewer"
custom_latex_viewer = "kcworks.views.previewers.invenio_custom_latex_viewer.custom_latex_viewer"

[project.entry-points."invenio_search.index_templates"]
kcworks = "kcworks.services.search.index_templates.templates:get_index_templates"

[project.entry-points."flask.commands"]
kcworks-users = "kcworks.cli:kcworks_users"
kcworks-index = "kcworks.cli:kcworks_index"

[project.scripts]
kcworks-users = "kcworks.cli:kcworks_users"
kcworks-index = "kcworks.cli:kcworks_index"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104", "E402"]
"tests/api/test_stats.py" = ["C416"]

[tool.ruff.lint]
# temporarily removed C for complexity checks
select = ["E", "F", "I", "B", "UP", "D", "DOC"]
# Ignore formatting-related rules (let black handle these)
ignore = [
    "E501", # Line too long
    "I001", # Import sorting
    "E1",   # Indentation
    # "E2",   # Whitespace
    # "E3",   # Blank lines
    "W1",   # Indentation warnings
    "W2",   # Whitespace warnings
    "W3",   # Blank line warnings
    # "COM",  # Trailing comma rules
    # "ISC",  # Implicit string concatenation
    # "Q",    # Quotes
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.mypy.overrides]]
module = "kcworks.services.search.index_templates.*"
ignore_errors = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    "tests/",
    "site/kcworks/dependencies/",
    "site/kcworks/stats_dashboard/",
    "site/kcworks/services/search/index_templates/*/os-v2/",
]

[tool.isort]
profile = "black"
line_length = 88
verbose = true
multi_line_output = 3  # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true

[tool.pytest.ini_options]
addopts = "--black --ruff --mypy --isort --doctest-glob='*.rst' --doctest-modules --ignore=tests/helpers --ignore=site/kcworks/dependencies --ignore=site/kcworks/stats_dashboard --cov=kcworks --cov-report=term-missing"
testpaths = ["tests", "site/kcworks"]
log_cli_level = "DEBUG"
isort_show_files = true
plugins = [
    "tests.fixtures.communities",
    "tests.fixtures.custom_fields",
    "tests.fixtures.identifiers",
    "tests.fixtures.mail",
    "tests.fixtures.metadata_fields",
    "tests.fixtures.records",
    "tests.fixtures.roles",
    "tests.fixtures.saml",
    "tests.fixtures.search_provisioning",
    "tests.fixtures.stats",
    "tests.fixtures.users",
    "tests.fixtures.vocabularies.affiliations",
    "tests.fixtures.vocabularies.community_types",
    "tests.fixtures.vocabularies.date_types",
    "tests.fixtures.vocabularies.descriptions",
    "tests.fixtures.vocabularies.funding_and_awards",
    "tests.fixtures.vocabularies.languages",
    "tests.fixtures.vocabularies.licenses",
    "tests.fixtures.vocabularies.resource_types",
    "tests.fixtures.vocabularies.roles",
    "tests.fixtures.vocabularies.subjects",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "djlint>=1.36.4",
    "psycopg2-binary>=2.9.10",
    "pytest-black>=0.6.0",
    "pytest-isort>=4.0.0",
    "requests-mock",
    "check-manifest>=0.25",
    "selenium",
    "docker-services-cli",
    "pytest-mock",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "sphinx-copybutton>=0.5.2",
]

[tool.coverage.run]
omit = [
    "site/kcworks/dependencies/*",
    "site/kcworks/views/task_results/*",
    "site/kcworks/stats_dashboard/*",
    "site/kcworks/services/search/index_templates/*",
]
