[build-system]
requires = ["setuptools>=61.0", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[project]
name = "kcworks"
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest-invenio>=2.1.0,<3.0.0"]

[project.entry-points."invenio_base.apps"]
kcworks = "kcworks.ext:KCWorks"

[project.entry-points."invenio_base.api_apps"]
kcworks = "kcworks.ext:KCWorks"

[project.entry-points."invenio_base.api_blueprints"]
kcworks_api = "kcworks.views.views:create_api_blueprint"

[project.entry-points."invenio_base.blueprints"]
kcworks_views = "kcworks.views.views:create_blueprint"
knowledge_commons_works_menu = "kcworks.blueprints.menu_customization:create_blueprint"
kcworks_stats_dashboard_view = "kcworks.stats_dashboard.views:create_blueprint"

[project.entry-points."invenio_assets.webpack"]
kcworks_theme = "kcworks.webpack:theme"

[project.entry-points."invenio_previewer.previewers"]
custom_pdf_viewer = "kcworks.views.previewers.invenio_custom_pdf_viewer.custom_pdf_viewer"
custom_default_viewer = "kcworks.views.previewers.invenio_custom_default_viewer.custom_default_viewer"
custom_docx_viewer = "kcworks.views.previewers.invenio_custom_docx_viewer.custom_docx_viewer"
custom_pptx_viewer = "kcworks.views.previewers.invenio_custom_pptx_viewer.custom_pptx_viewer"
custom_latex_viewer = "kcworks.views.previewers.invenio_custom_latex_viewer.custom_latex_viewer"

[project.entry-points."invenio_search.index_templates"]
kcworks = "kcworks.services.search.index_templates.templates:get_index_templates"

[project.entry-points."flask.commands"]
kcworks-index = "kcworks.cli:index"

[project.scripts]
kcworks-index = "kcworks.cli:index"

[tool.pytest.ini_options]
testpaths = ["tests", "kcworks"]
addopts = "--doctest-glob='*.rst' --doctest-modules --ignore=tests/helpers --ignore=kcworks/dependencies --ignore=kcworks/stats_dashboard"
plugins = [
  "tests.fixtures.communities",
  "tests.fixtures.metadata_fields",
  "tests.fixtures.custom_fields",
  "tests.fixtures.identifiers",
  "tests.fixtures.records",
  "tests.fixtures.roles",
  "tests.fixtures.saml",
  "tests.fixtures.stats",
  "tests.fixtures.users",
  "tests.fixtures.vocabularies.affiliations",
  "tests.fixtures.vocabularies.community_types",
  "tests.fixtures.vocabularies.date_types",
  "tests.fixtures.vocabularies.descriptions",
  "tests.fixtures.vocabularies.languages",
  "tests.fixtures.vocabularies.licenses",
  "tests.fixtures.vocabularies.resource_types",
  "tests.fixtures.vocabularies.roles",
  "tests.fixtures.vocabularies.subjects",
  "tests.helpers.sample_records.basic",
]

[tool.setuptools.package-data]
"*" = ["*.po", "*.pot", "*.mo"]
