
[metadata]
name = kcworks

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
# invenio_base.api_apps =
#     invenio_remote_api_provisioner = kcworks.invenio_remote_api_provisioner.ext:InvenioRemoteAPIProvisioner
# invenio_base.apps =
#     invenio_remote_api_provisioner = kcworks.invenio_remote_api_provisioner.ext:InvenioRemoteAPIProvisioner
# invenio_celery.tasks =
#     invenio_remote_api_provisioner = kcworks.invenio_remote_api_provisioner.tasks
invenio_base.blueprints =
    kcworks_views = kcworks.views.views:create_blueprint
    knowledge_commons_works_menu = kcworks.blueprints.menu_customization:create_blueprint
invenio_assets.webpack =
    kcworks_theme = kcworks.webpack:theme
# invenio_i18n.translations =
#     messages = kcworks
invenio_previewer.previewers =
    custom_pdf_viewer = kcworks.invenio_custom_pdf_viewer.custom_pdf_viewer

[tool:pytest]
testpaths = tests

[compile_catalog]
directory = kcworks/translations/
use-fuzzy = True
# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]