
[metadata]
name = kcworks

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    kcworks_views = kcworks.views.views:create_blueprint
    knowledge_commons_works_menu = kcworks.blueprints.menu_customization:create_blueprint
    kcworks_stats_dashboard_view = kcworks.stats_dashboard.views:create_blueprint
invenio_assets.webpack =
    kcworks_theme = kcworks.webpack:theme
# invenio_i18n.translations =
#     messages = kcworks
invenio_previewer.previewers =
    custom_pdf_viewer = kcworks.invenio_custom_pdf_viewer.custom_pdf_viewer
invenio_search.index_templates =
    kcworks = kcworks.services.search.index_templates.templates:get_index_templates

[tool:pytest]
testpaths = tests

[compile_catalog]
directory = kcworks/translations/
use-fuzzy = True
# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]